--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -1,6 +1,8 @@
 $left_pane_size: 400px;
+$hot_pane_height: 442px;
 html, body {
   height: 100%;
+  overflow: hidden;
 }
 #root {
   display: table;
@@ -11,16 +13,28 @@ html, body {
     div.left {
       border-sizing: border-box;
       float: left;
-      border: 1px solid black;
+      border-right: 1px solid black;
       width: $left_pane_size;
       height: 100%;
     }
     div.right {
-      border-sizing: border-box;
       float: left;
-      border: 1px solid black;
       width: calc(100% - #{$left_pane_size});
       height: 100%;
+      .hot-pane {
+        box-sizing: border-box;
+        height: $hot_pane_height;
+        border-bottom: 1px solid black;
+      }
+      .preview-pane {
+        height: calc(100% - #{$hot_pane_height});
+        iframe {
+          box-sizing: border-box;
+          border: none;
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
   }
 }
