cytoscapeが表示されている

--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -5,19 +5,19 @@ html, body {
   overflow: hidden;
 }
 #root {
-  display: table;
   width: 100%;
   height: 100%;
   > div {
     height: 100%;
     div.left {
-      border-sizing: border-box;
+      box-sizing: border-box;
       float: left;
       border-right: 1px solid black;
       width: $left_pane_size;
       height: 100%;
       .graph {
         height: 100%;
+        width: 100%;
       }
     }
     div.right {
