--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -19,11 +19,14 @@ html, body {
         height: 100%;
         width: 100%;
         position: relative;
-        .controller {
+        .graph-controller {
           position: absolute;
           z-index: 100;
           right: 5px;
           top: 5px;
+        }
+        &.connect-mode {
+          background-color: #eef;
         }
       }
     }
