--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -15,6 +15,7 @@ html, body {
       .graph {
         height: 100%;
         width: 100%;
+        overflow: hidden;
         position: relative;
         .graph-controller {
           position: absolute;
@@ -40,6 +41,7 @@ html, body {
       .preview-pane {
         height: 100%;
         width: 100%;
+        overflow: hidden;
         iframe {
           box-sizing: border-box;
           border: none;
