--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -37,8 +37,12 @@ html, body {
         box-sizing: border-box;
         height: 100%;
         width: 100%;
-        .CodeMirror {
-          font-family: Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
+        .ReactCodeMirror {
+          height: 100%;
+          .CodeMirror {
+            font-family: Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
+            height: 100%;
+          }
         }
       }
       .preview-pane {
