--- a/www/css/runtime.css
+++ b/www/css/runtime.css
@@ -19,4 +19,9 @@ table {
     border: 1px solid #ccc;
     padding: 0.2em 0.5em; }
 
-/*# sourceMappingURL=runtime.css.map */
+.error-message {
+  color: #a94442;
+  background-color: #f2dede;
+  border: 1px solid #ebccd1;
+  padding: 15px;
+  border-radius: 4px; }
