--- a/www/css/runtime.scss
+++ b/www/css/runtime.scss
@@ -27,3 +27,10 @@ table {
     @include cell-margin();
   }
 }
+.error-message {
+  color: #a94442;
+  background-color: #f2dede;
+  border: 1px solid #ebccd1;
+  padding: 15px;
+  border-radius: 4px;
+}
