--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -46,6 +46,7 @@ html, body {
         }
       }
       .preview-pane {
+        position: absolute;
         height: 100%;
         width: 100%;
         overflow: hidden;
