--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -37,6 +37,12 @@ html, body {
         box-sizing: border-box;
         height: 100%;
         width: 100%;
+        .editor-controller {
+          position: absolute;
+          z-index: 100;
+          right: 20px;
+          top: 5px;
+        }
         .ReactCodeMirror {
           height: 100%;
           .CodeMirror {
