選択肢をHTMLで編集できるように修正中

--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -123,3 +123,18 @@ html, body {
     }
   }
 }
+.choice-editor {
+  .choice-editor-row {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    .choice-editor-tinymce {
+      flex-grow: 1;
+    }
+    .choice-editor-controller {
+      button {
+        margin-left: 10px;
+      }
+    }
+  }
+}
