選択肢をWYSIWYGにした

--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -128,7 +128,7 @@ html, body {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    .choice-editor-tinymce {
+    .choice-editor-tinymce-container {
       flex-grow: 1;
     }
     .choice-editor-controller {
