--- a/www/css/editor.scss
+++ b/www/css/editor.scss
@@ -14,8 +14,10 @@ html, body {
       height: 100%;
       .tab-content {
         height: calc(100% - 42px);
-        #graph {
+        > .tab-pane {
           height: 100%;
+        }
+        #graph {
           .graph {
             height: 100%;
             width: 100%;
@@ -151,4 +153,10 @@ html, body {
       }
     }
   }
+}
+.component-list {
+  padding: 5px;
+}
+.component-button {
+  margin-bottom: 5px;
 }
