選択肢のデータの持ち方を変更

--- a/www/css/runtime.css
+++ b/www/css/runtime.css
@@ -3,9 +3,9 @@ h4 {
   margin-top: 1em;
   margin-bottom: 0; }
 
-label.vertical {
+.checkbox label.vertical {
   display: block; }
-label input {
+.checkbox label input {
   vertical-align: text-top; }
 
 table {
