--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -9,56 +9,46 @@ html, body {
   position: relative;
   > div {
     height: 100%;
-    div.left {
-      box-sizing: border-box;
-      height: 100%;
-      > #left-tab {
-        height: 100%;
-      }
-      .tab-content {
-        height: calc(100% - 42px);
-        > .tab-pane {
-          height: 100%;
-          overflow: auto;
-        }
-      }
-    }
-    .editor {
-      box-sizing: border-box;
-      height: 100%;
-      width: 100%;
-      overflow: auto;
-      .form-horizontal .form-group {
-        margin-left: 0;
-        margin-right: 0;
-      }
-      .editor-controller {
-        position: absolute;
-        z-index: 100;
-        right: 20px;
-        top: 5px;
-      }
-      .ReactCodeMirror {
-        height: 100%;
-        .CodeMirror {
-          font-family: Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
-          height: 100%;
-        }
-      }
-      .mce-content-body {
-        border: 1px solid #ccc;
-      }
-    }
-    .preview-pane {
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      iframe {
+    .main {
+      position: relative;
+      height: calc(100% - 52px);
+      .editor-pane {
         box-sizing: border-box;
-        border: none;
-        width: 100%;
         height: 100%;
+        width: 100%;
+        overflow: auto;
+        .form-horizontal .form-group {
+          margin-left: 0;
+          margin-right: 0;
+        }
+        .editor-controller {
+          position: absolute;
+          z-index: 100;
+          right: 20px;
+          top: 5px;
+        }
+        .ReactCodeMirror {
+          height: 100%;
+          .CodeMirror {
+            font-family: Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
+            height: 100%;
+          }
+        }
+        .mce-content-body {
+          border: 1px solid #ccc;
+        }
+      }
+      .preview-pane {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        iframe {
+          box-sizing: border-box;
+          border: none;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
