ページ一覧の設問を必ず1行で表示するように修正

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -175,6 +175,9 @@ html, body {
       list-style: none;
       .question {
         cursor: move;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
       .insert-item-box {
         height: 10px;
