--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -1,38 +1,6 @@
-@mixin cell-margin() {
-  border: 1px solid #ccc;
-  padding: 0.2em 0.5em;
+.parsley-errors-list {
+  display: none;
 }
-
-h4 {
-  background-color: #eef;
-  margin-top: 1em;
-  margin-bottom: 0;
-}
-.checkbox {
-  label {
-    &.vertical {
-      display: block;
-    }
-    input {
-      vertical-align: text-top;
-    }
-  }
-}
-table {
-  border-collapse: collapse;
-  th {
-    text-align: right;
-    background-color: #eef;
-    @include cell-margin();
-  }
-  td {
-    @include cell-margin();
-  }
-}
-.error-message {
-  color: #a94442;
-  background-color: #f2dede;
-  border: 1px solid #ebccd1;
-  padding: 15px;
-  border-radius: 4px;
+.tooltipster-base {
+  pointer-events: auto;
 }
