--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -167,6 +167,7 @@ html, body {
     width: 100%;
     .delete-button {
       margin-right: 0.5em;
+      cursor: pointer;
     }
     .header {
       white-space: nowrap;
@@ -175,6 +176,7 @@ html, body {
     }
     .questions {
       list-style: none;
+      padding-left: 1.5em;
       .question {
         cursor: move;
         white-space: nowrap;
