--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -2,6 +2,7 @@ $page-list-item-controller-width: 21px;
 html, body {
   height: 100%;
   overflow: hidden;
+  min-width: 800px;
 }
 #root {
   width: 100%;
