選択肢の移動をできるようにしようとしている途中

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -134,6 +134,8 @@ html, body {
         text-align: center;
       }
       .item-editor-tinymce-container {
+        padding-left: 5px;
+        padding-right: 5px;
         width: 100%;
       }
       .buttons {
