設問・遷移条件の追加でliエレメントをクリックできるように修正

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -223,6 +223,7 @@ html, body {
       }
       .insert-item-box {
         height: 10px;
+        cursor: pointer;
         div {
           position: relative;
           height: 100%;
