Modify graphs VD.

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -353,3 +353,15 @@ html, body {
     }
   }
 }
+
+/* グラフ */
+.enq-page {
+  padding: 6px;
+}
+
+.enq-item-controller {
+  right: 6px;
+  top: 6px;
+  padding-right: 6px;
+  padding-left: 6px;
+}
