Modify tabs VD.

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -354,6 +354,14 @@ html, body {
   }
 }
 
+/* タブ */
+.enq-tabs {
+  
+  >ul {
+    padding: 6px 5px 0 5px;
+  }
+}
+
 /* グラフ */
 .enq-page {
   padding: 6px;
