不具合対応 refs #154598

--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -4,3 +4,11 @@
 .tooltipster-base {
   pointer-events: auto;
 }
+.question {
+  strong {
+    font-weight: bold;
+  }
+  em {
+    font-style: italic;
+  }
+}
