Flowで選択されているノードがわかるように変更

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -209,6 +209,9 @@ html, body {
     margin-bottom: 5px;
     border: 1px solid #ccc;
     width: 100%;
+    &.selected {
+      border: 3px solid #3c763d;
+    }
     .header {
       position: relative;
       white-space: nowrap;
