WYSIWYGが効かない不具合が合ったので修正

--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -6,14 +6,11 @@
 }
 .question {
   strong {
+    font-style: inherit;
     font-weight: bold;
   }
   em {
     font-style: italic;
-  }
-  .question-title {
-    em {
-      font-weight: bold;
-    }
+    font-weight: inherit;
   }
 }
