SPのチェックボックスバリデーションが正しく動作しない不具合を修正

--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -17,5 +17,9 @@
 .formErrorMsg.formErrorContent {
   color: #fff;
   padding: 0.5em;
+  box-sizing: border-box;
 }
 
+.question-form-grid-table .personalInfo-label {
+  box-sizing: border-box;
+}
