列合計のvalidation途中

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -160,6 +160,19 @@ html, body {
     border-top: 0;
     padding-top: 0;
   }
+  .item-validator-list {
+    padding: 0;
+    > li {
+      display: flex;
+      > span:first-child {
+        white-space: nowrap;
+        line-height: 2;
+      }
+      > .form-group {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
 .item-editor {
   .item-editor-table {
