--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -1,8 +1,4 @@
-$page-list-item-controller-width: 21px;
-
-$backgroud-color-finisher: #e6f6d7;
-$backgroud-color-branch: #e7e1f9;
-$backgroud-color-page: #f8f9e1;
+@import "../../runtime/css/common";
 
 html, body {
   height: 100%;
