--- a/lib/runtime/css/common.scss
+++ b/lib/runtime/css/common.scss
@@ -12,3 +12,7 @@ $background-color-question-detail: #e5f0ff;
 $border-color-question-detail: #08198e;
 $background-color-detail-function: #426ef4;
 $color-detail-function: #fff;
+$background-color-answer-value: #f7024b;
+$color-answer-value: #fff;
+$background-color-fixed-value: #009e14;
+$color-fixed-value: #fff;
