制御情報の表示方法を変更

--- a/lib/preview/css/detail.scss
+++ b/lib/preview/css/detail.scss
@@ -77,5 +77,20 @@ body {
       }
     }
   }
+
+  .question-detail {
+    display: flex;
+    > div {
+      width: 50%;
+      padding: 5px;
+      table {
+        width: 100%;
+        td {
+          padding: 0 5px;
+          border: 1px solid black;
+        }
+      }
+    }
+  }
 }
 
